<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_dashboard"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_available_bus"
        android:name="com.example.busschedulingapp.ui.profile.ProfileFragment"
        android:label="@string/menu_available_bus"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.busschedulingapp.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.example.busschedulingapp.ui.reservation.ReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_reservation" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.busschedulingapp.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.busschedulingapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.busschedulingapp.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>