<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/user_drawer_layout"
    tools:context="com.busschedulingap.busschedulingapp.user.User_Schedule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/user_toolbar" />

            <TableLayout
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="4"
                        android:background="#22A48E"
                        android:fontFamily="@font/montserrat_semibold"
                        android:padding="10sp"
                        android:text="@string/title1"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="10dp">

                    </TextView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="7"
                        android:background="#4C72B1"
                        android:fontFamily="@font/montserrat_semibold"
                        android:padding="10sp"
                        android:text="@string/title2"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="10dp">

                    </TextView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="4"
                        android:background="#DF4F4F"
                        android:fontFamily="@font/montserrat_semibold"
                        android:padding="10sp"
                        android:text="@string/title3"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="10dp">

                    </TextView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="4"
                        android:background="#EFA94D"
                        android:fontFamily="@font/montserrat_semibold"
                        android:padding="10sp"
                        android:text="@string/title4"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="10dp">

                    </TextView>
                </TableRow>

            </TableLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/sched_swip"
                android:layout_width="match_parent"
                android:layout_height="540dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sched_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/user_nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>